--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CRUD_14_WilliamsRosas
+application.vendor=Lab9
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,15 @@ dist.jar=${dist.dir}/CRUD_14_WilliamsRosas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CRUD_14_WilliamsRosas
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.3.0.jar=..\\..\\..\\Downloads\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Lab9\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=..\\..\\..\\Downloads\\mysql-connector-java-5.0.8 (1)\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.3.0.jar}:\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -79,7 +81,7 @@ main.class=test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_22
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
