--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
 compile.on.save=true
-do.depend=false
+do.depend=true
 do.jar=true
 do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Lab9\\AppData\\Roaming\\NetBeans\\20\\build.properties
+user.properties.file=C:\\Users\\Lab10\\AppData\\Roaming\\NetBeans\\22\\build.properties
