--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,23 +35,21 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CRUD_14_WilliamsRosas
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Lab9\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-java-5.0.8-bin.jar=..\\..\\..\\Downloads\\mysql-connector-java-5.0.8 (1)\\mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
+file.reference.mysql-connector-j-9.0.0.jar=C:\\Users\\Lab10\\Downloads\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=22
+javac.target=22
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -77,11 +75,11 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=CRUD_14_WilliamsRosas
-main.class=test
+main.class=vista.FechasCivicas
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_22
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
